fixed monster activations

--- a/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
@@ -4591,3 +4591,543 @@ ability={ffg:MONSTER_FORMLESS_SPAWN_MOVE_24}
 master={ffg:MONSTER_FORMLESS_SPAWN_ATTACK_24}
 movebutton={ffg:UI_CANT_MOVE_ADJACENT}
 move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationFeatheredSerpent01]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_01}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent02]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_02}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_02}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent03]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_03}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_03}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent04]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_04}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_04}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent05]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_05}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_05}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent06]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_06}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_06}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent07]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_07}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_07}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent08]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_08}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_08}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent09]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_09}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_09}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent10]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_10}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_10}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent11]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_11}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_11}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent12]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_12}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_12}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent13]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_13}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_13}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent14]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_14}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_14}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent15]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_15}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_15}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent16]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_16}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_16}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent17]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_17}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_17}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent18]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_18}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_18}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent19]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_19}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_19}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent20]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_20}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_20}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent21]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_21}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_21}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent22]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_22}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_22}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent23]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_23}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_23}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationFeatheredSerpent24]
+ability={ffg:MONSTER_FEATHERED_SERPENT_MOVE_24}
+master={ffg:MONSTER_FEATHERED_SERPENT_ATTACK_24}
+movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_FEATHERED_SERPENT_MOVE_00}
+
+[MonsterActivationTempleGuardian01]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_01}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian02]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_02}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_02}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian03]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_03}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_03}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian04]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_04}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_04}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian05]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_05}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_05}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian06]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_06}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_06}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian07]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_07}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_07}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian08]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_08}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_08}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian09]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_09}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_09}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian10]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_10}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_10}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian11]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_11}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_11}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian12]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_12}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_12}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian13]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_13}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_13}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian14]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_14}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_14}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian15]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_15}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_15}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian16]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_16}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_16}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian17]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_17}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_17}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian18]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_18}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_18}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian19]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_19}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_19}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian20]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_20}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_20}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian21]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_21}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_21}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian22]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_22}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_22}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian23]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_23}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_23}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationTempleGuardian24]
+ability={ffg:MONSTER_TEMPLE_GUARDIAN_MOVE_24}
+master={ffg:MONSTER_TEMPLE_GUARDIAN_ATTACK_24}
+movebutton={ffg:UI_NOT_IN_SPACE}
+move={ffg:MONSTER_COMMON_MOVE_01}
+
+[MonsterActivationSerpentPerson01]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_01}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson02]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_02}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_02}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationSerpentPerson03]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_03}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_03}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationSerpentPerson04]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_04}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_04}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson05]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_05}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_05}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson06]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_06}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_06}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson07]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_07}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_07}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson08]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_08}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_08}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationSerpentPerson09]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_09}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_09}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson10]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_10}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_10}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson11]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_11}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_11}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson12]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_12}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_12}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson13]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_13}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_13}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson14]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_14}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_14}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson15]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_15}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_15}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson16]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_16}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_16}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationSerpentPerson17]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_17}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_17}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson18]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_18}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_18}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson19]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_19}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_19}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson20]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_20}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_20}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson21]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_21}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_21}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson22]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_22}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_22}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationSerpentPerson23]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_23}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_23}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSerpentPerson24]
+ability={ffg:MONSTER_SERPENT_PERSON_MOVE_24}
+master={ffg:MONSTER_SERPENT_PERSON_ATTACK_24}
+movebutton={ffg:UI_NOT_WITHIN_MOVE}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationAncientBasilisk01]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_01}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk02]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_02}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_02}
+movebutton={ffg:UI_CANT_MOVE_ADJACENT}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationAncientBasilisk03]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_03}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_03}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk04]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_04}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_04}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk05]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_05}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_05}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk06]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_06}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_06}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk07]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_07}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_07}
+movebutton={ffg:UI_CANT_MOVE_ADJACENT}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationAncientBasilisk08]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_08}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_08}
+movebutton={ffg:UI_CANT_MOVE_ADJACENT}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationAncientBasilisk09]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_09}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_09}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk10]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_10}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_10}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk11]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_11}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_11}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk12]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_12}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_12}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk13]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_13}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_13}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk14]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_14}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_14}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk15]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_15}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_15}
+movebutton={ffg:UI_CANT_MOVE_ADJACENT}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationAncientBasilisk16]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_16}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_16}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk17]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_17}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_17}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk18]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_18}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_18}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk19]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_19}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_19}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk20]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_20}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_20}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk21]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_21}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_21}
+movebutton={ffg:UI_CANT_MOVE_ADJACENT}
+move={ffg:MONSTER_COMMON_MOVE_02}
+
+[MonsterActivationAncientBasilisk22]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_22}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_22}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk23]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_23}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_23}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationAncientBasilisk24]
+ability={ffg:MONSTER_ANCIENT_BASILISK_MOVE_24}
+master={ffg:MONSTER_ANCIENT_BASILISK_ATTACK_24}
+movebutton={ffg:UI_CANT_MOVE_ADJACENT}
+move={ffg:MONSTER_COMMON_MOVE_02}
