--- a/unity/Assets/StreamingAssets/content/MoM/base/attacks.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/attacks.ini
@@ -1198,7 +1198,6 @@ text={ffg:ATTACK_UNARMED_VS_SPIRIT_16}
 target=spirit
 attacktype=unarmed
 
-
 [AttackBladedVsFleshless01]
 text={ffg:ATTACK_BLADED_VS_FLESHLESS_01}
 target=fleshless
@@ -1312,4 +1311,39 @@ attacktype=unarmed
 [AttackUnarmedVsFleshless03]
 text={ffg:ATTACK_UNARMED_VS_FLESHLESS_03}
 target=fleshless
+attacktype=unarmed
+
+[AttackBladedVsSnakePerson08]
+text={ffg:ATTACK_BLADED_VS_SNAKE_PERSON_08}
+target=snakeperson
+attacktype=bladed
+
+[AttackFirearmVsSnakePerson11]
+text={ffg:ATTACK_FIREARM_VS_SNAKE_PERSON_11}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson12]
+text={ffg:ATTACK_FIREARM_VS_SNAKE_PERSON_12}
+target=snakeperson
+attacktype=firearm
+
+[AttackHeavyVsSnakePerson10]
+text={ffg:ATTACK_HEAVY_VS_SNAKE_PERSON_10}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson18]
+text={ffg:ATTACK_HEAVY_VS_SNAKE_PERSON_18}
+target=snakeperson
+attacktype=heavy
+
+[AttackUnarmedVsSnakePerson02]
+text={ffg:ATTACK_UNARMED_VS_SNAKE_PERSON_02}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson05]
+text={ffg:ATTACK_UNARMED_VS_SNAKE_PERSON_05}
+target=snakeperson
 attacktype=unarmed
