--- a/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
@@ -1637,3 +1637,195 @@ text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_11}
 [EvadeFormlessSpawn12]
 monster=FormlessSpawn
 text={ffg:MONSTER_FORMLESS_SPAWN_EVADE_12}
+
+[EvadeFeatheredSerpent01]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_01}
+
+[EvadeFeatheredSerpent02]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_02}
+
+[EvadeFeatheredSerpent03]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_03}
+
+[EvadeFeatheredSerpent04]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_04}
+
+[EvadeFeatheredSerpent05]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_05}
+
+[EvadeFeatheredSerpent06]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_06}
+
+[EvadeFeatheredSerpent07]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_07}
+
+[EvadeFeatheredSerpent08]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_08}
+
+[EvadeFeatheredSerpent09]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_09}
+
+[EvadeFeatheredSerpent10]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_10}
+
+[EvadeFeatheredSerpent11]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_11}
+
+[EvadeFeatheredSerpent12]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_EVADE_12}
+
+[EvadeSerpentPerson01]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_01}
+
+[EvadeSerpentPerson02]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_02}
+
+[EvadeSerpentPerson03]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_03}
+
+[EvadeSerpentPerson04]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_04}
+
+[EvadeSerpentPerson05]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_05}
+
+[EvadeSerpentPerson06]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_06}
+
+[EvadeSerpentPerson07]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_07}
+
+[EvadeSerpentPerson08]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_08}
+
+[EvadeSerpentPerson09]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_09}
+
+[EvadeSerpentPerson10]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_10}
+
+[EvadeSerpentPerson11]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_11}
+
+[EvadeSerpentPerson12]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_EVADE_12}
+
+[EvadeTempleGuardian01]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_01}
+
+[EvadeTempleGuardian02]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_02}
+
+[EvadeTempleGuardian03]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_03}
+
+[EvadeTempleGuardian04]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_04}
+
+[EvadeTempleGuardian05]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_05}
+
+[EvadeTempleGuardian06]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_06}
+
+[EvadeTempleGuardian07]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_07}
+
+[EvadeTempleGuardian08]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_08}
+
+[EvadeTempleGuardian09]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_09}
+
+[EvadeTempleGuardian10]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_10}
+
+[EvadeTempleGuardian11]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_11}
+
+[EvadeTempleGuardian12]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_EVADE_12}
+
+[EvadeAncientBasilisk01]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_01}
+
+[EvadeAncientBasilisk02]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_02}
+
+[EvadeAncientBasilisk03]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_03}
+
+[EvadeAncientBasilisk04]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_04}
+
+[EvadeAncientBasilisk05]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_05}
+
+[EvadeAncientBasilisk06]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_06}
+
+[EvadeAncientBasilisk07]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_07}
+
+[EvadeAncientBasilisk08]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_08}
+
+[EvadeAncientBasilisk09]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_09}
+
+[EvadeAncientBasilisk10]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_10}
+
+[EvadeAncientBasilisk11]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_11}
+
+[EvadeAncientBasilisk12]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_EVADE_12}
