--- a/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
@@ -1665,3 +1665,195 @@ text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_11}
 [HorrorFormlessSpawn12]
 monster=FormlessSpawn
 text={ffg:MONSTER_FORMLESS_SPAWN_HORROR_12}
+
+[HorrorFeatheredSerpent01]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_01}
+
+[HorrorFeatheredSerpent02]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_02}
+
+[HorrorFeatheredSerpent03]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_03}
+
+[HorrorFeatheredSerpent04]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_04}
+
+[HorrorFeatheredSerpent05]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_05}
+
+[HorrorFeatheredSerpent06]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_06}
+
+[HorrorFeatheredSerpent07]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_07}
+
+[HorrorFeatheredSerpent08]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_08}
+
+[HorrorFeatheredSerpent09]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_09}
+
+[HorrorFeatheredSerpent10]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_10}
+
+[HorrorFeatheredSerpent11]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_11}
+
+[HorrorFeatheredSerpent12]
+monster=FeatheredSerpent
+text={ffg:MONSTER_FEATHERED_SERPENT_HORROR_12}
+
+[HorrorSerpentPerson01]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_01}
+
+[HorrorSerpentPerson02]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_02}
+
+[HorrorSerpentPerson03]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_03}
+
+[HorrorSerpentPerson04]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_04}
+
+[HorrorSerpentPerson05]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_05}
+
+[HorrorSerpentPerson06]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_06}
+
+[HorrorSerpentPerson07]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_07}
+
+[HorrorSerpentPerson08]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_08}
+
+[HorrorSerpentPerson09]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_09}
+
+[HorrorSerpentPerson10]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_10}
+
+[HorrorSerpentPerson11]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_11}
+
+[HorrorSerpentPerson12]
+monster=SerpentPerson
+text={ffg:MONSTER_SERPENT_PERSON_HORROR_12}
+
+[HorrorTempleGuardian01]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_01}
+
+[HorrorTempleGuardian02]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_02}
+
+[HorrorTempleGuardian03]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_03}
+
+[HorrorTempleGuardian04]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_04}
+
+[HorrorTempleGuardian05]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_05}
+
+[HorrorTempleGuardian06]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_06}
+
+[HorrorTempleGuardian07]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_07}
+
+[HorrorTempleGuardian08]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_08}
+
+[HorrorTempleGuardian09]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_09}
+
+[HorrorTempleGuardian10]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_10}
+
+[HorrorTempleGuardian11]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_11}
+
+[HorrorTempleGuardian12]
+monster=TempleGuardian
+text={ffg:MONSTER_TEMPLE_GUARDIAN_HORROR_12}
+
+[HorrorAncientBasilisk01]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_01}
+
+[HorrorAncientBasilisk02]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_02}
+
+[HorrorAncientBasilisk03]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_03}
+
+[HorrorAncientBasilisk04]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_04}
+
+[HorrorAncientBasilisk05]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_05}
+
+[HorrorAncientBasilisk06]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_06}
+
+[HorrorAncientBasilisk07]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_07}
+
+[HorrorAncientBasilisk08]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_08}
+
+[HorrorAncientBasilisk09]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_09}
+
+[HorrorAncientBasilisk10]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_10}
+
+[HorrorAncientBasilisk11]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_11}
+
+[HorrorAncientBasilisk12]
+monster=AncientBasilisk
+text={ffg:MONSTER_ANCIENT_BASILISK_HORROR_12}
