--- a/unity/Assets/StreamingAssets/content/MoM/pots/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/pots/monsters.ini
@@ -21,7 +21,7 @@ healthperhero=2
 [MonsterSerpentPerson]
 name={ffg:MONSTER_SERPENT_PERSON}
 image="{import}/img/Monster_SerpentPerson"
-traits=humanoid
+traits=snakeperson
 awareness=4
 horror=3
 brawn=3
