--- a/unity/Assets/StreamingAssets/content/MoM/pots/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/pots/tokens.ini
@@ -54,3 +54,11 @@ pps=200
 [TokenTempleDoor2]
 image="img/templedoor2_token"
 pps=200
+
+[TokenTempleWall]
+image="img/templewall_token"
+pps=200
+
+[TokenTempleWall2]
+image="img/templewall2_token"
+pps=200
