Fixed naming of Zadok Allen

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -310,11 +310,11 @@ height=130
 width=130
 
 [TokenZadocAllen]
-image="img/SpriteAtlasTexture-token"
-x=520
-y=260
-height=130
-width=130
+image="img/zadok_allen_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenOtheraGilman]
 image="img/SpriteAtlasTexture-token"
