tome of horrors is a tome and not equipment

--- a/unity/Assets/StreamingAssets/content/MoM/btt/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/btt/items.ini
@@ -28,10 +28,12 @@ name={ffg:COMMON_ITEM_RAZOR}
 image={import}/img/CommonItem_Razor
 traits=weapon bladedweapon common
 
+; In previous versions, this was incorrectly referred to and printed as equipment, even though it is a tome.
+; See also https://github.com/NPBruce/valkyrie/issues/1300
 [ItemCommonTomeOfHorrors]
 name={ffg:COMMON_ITEM_TOME_OF_HORRORS}
 image={import}/img/CommonItem_TomeOfHorrors
-traits=equipment common
+traits=tome common
 
 [ItemCommonTomeOfSecrets]
 name={ffg:COMMON_ITEM_TOME_OF_SECRETS}
